force-app/main/default/objects/ILT__c/fields/Cancel_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_By_Date__c</fullName>
    <label>Cancel By Date</label>
    <type>Date</type>
</CustomField>