force-app/main/default/objects/ILT__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Palo Alto</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>NYC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>