force-app/main/default/objects/ILT__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Integrate</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Time (TTM)</fullName>
            </value>
            <value>
                <fullName>Walls</fullName>
            </value>
            <value>
                <fullName>Conflicts Analyst - Foundations</fullName>
            </value>
            <value>
                <fullName>Conflicts Analyst - Leading Practices</fullName>
            </value>
            <value>
                <fullName>eLearning – Navigating Conflicts</fullName>
            </value>
            <value>
                <fullName>eLearning – Total Time End User</fullName>
            </value>
            <value>
                <fullName>eLearning – Total Time Admin</fullName>
            </value>
            <value>
                <fullName>eLearning – Walls Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>