force-app/main/default/objects/ILT__c/fields/Seats_Taken__c.field-meta.xml
<CustomField>
    <fullName>Seats_Taken__c</fullName>
    <label>Seats Taken</label>
    <summaryForeignKey>ILT_Attendee__c.ILT__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>