force-app/main/default/objects/ILT__c/fields/Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Selling_Price__c</fullName>
    <label>Selling Price</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>